header config changes